# SiliconPlayer

./: .gitignore  .gitmodules  build.gradle.kts  settings.gradle.kts
.githooks/: pre-commit
.github/workflows/: android-optimized-debug.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  AudioEngineCoreOptions.cpp  AudioEngineEffects.cpp  AudioEngineMetadata.cpp  AudioEnginePipeline.cpp  AudioEngineRender.cpp  AudioEngineStream.cpp  AudioEngineTransport.cpp  CMakeLists.txt  ChannelScopeSharedState.h  SiliconPlayerNative.cpp
app/src/main/cpp/decoders/: AdPlugDecoder.cpp  AdPlugDecoder.h  AudioDecoder.h  CPConvStub.c  CRSIDDecoder.cpp  CRSIDDecoder.h  DecoderRegistry.cpp  DecoderRegistry.h  FFmpegDecoder.cpp  FFmpegDecoder.h  FurnaceDecoder.cpp  FurnaceDecoder.h  GmeDecoder.cpp  GmeDecoder.h  HivelyTrackerDecoder.cpp  HivelyTrackerDecoder.h  KlystrackDecoder.cpp  KlystrackDecoder.h  LazyUsf2Decoder.cpp  LazyUsf2Decoder.h  LibOpenMPTDecoder.cpp  LibOpenMPTDecoder.h  LibSidPlayFpDecoder.cpp  LibSidPlayFpDecoder.h  Sc68Decoder.cpp  Sc68Decoder.h  SdlCompat.c  UadeDecoder.cpp  UadeDecoder.h  VGMDecoder.cpp  VGMDecoder.h  Vio2sfDecoder.cpp  Vio2sfDecoder.h
app/src/main/cpp/decoders/sid/: ReSidEmu.cpp  ReSidEmu.h
app/src/main/cpp/effects/openmpt_dsp/: OpenMptDspEffects.cpp  OpenMptDspEffects.h
app/src/main/java/com/flopster101/siliconplayer/: AdaptiveDialogs.kt  AppConstants.kt  AppDefaults.kt  AppPermissions.kt  ArtworkLoader.kt  ArtworkSwipePreviewState.kt  AudioTrackOutputBackend.kt  BrowserLocationRouting.kt  BrowserNavigatorState.kt  BrowserRouteResolution.kt  ChannelScopeVisibleElements.kt  CoreCapabilities.kt  CoreSettings.kt  CrsidConfig.kt  DecoderArtworkHints.kt  DecoderNames.kt  DialogScrollbarFlash.kt  FileExtensionFileSupport.kt  FileExtensionHeuristics.kt  GmeConfig.kt  HomeUi.kt  LocalBrowserThumbnailCacheSupport.kt  MainActivity.kt  MiniPlayerUi.kt  NativeBridge.kt  PlaybackBroadcasts.kt  PlaybackCapabilities.kt  PlaybackService.kt  PlayerLoadingPlaceholders.kt  PlayerOrchestration.kt  PlaylistStore.kt  PlaylistSupport.kt  ProgressiveRandomAccessCache.kt  RecentArtworkCacheSupport.kt  RepeatMode.kt  RepeatModeFileSupport.kt  SettingsUi.kt  SidPlayFpConfig.kt  SmbAvioBridge.kt  SmbProgressiveRandomAccessTransport.kt  (+8 more)
app/src/main/java/com/flopster101/siliconplayer/data/: ArchiveBrowserReturnTargets.kt  ArchiveSupport.kt  FileItem.kt  FileRepository.kt
app/src/main/java/com/flopster101/siliconplayer/navigation/: AppNavigationActions.kt  AppNavigationCoreEffects.kt  AppNavigationModels.kt  AppNavigationPendingOpenEffects.kt  AppNavigationPlaybackEffects.kt  AppNavigationPlaybackPollEffects.kt  AppNavigationRemotePreloadEffects.kt  AppNavigationSettingsStates.kt  AppNavigationStartupEffects.kt  AppNavigationTrackPreferenceEffects.kt  AppNavigationUiEffects.kt  SettingsNavigationCoordinator.kt
app/src/main/java/com/flopster101/siliconplayer/network/: HttpBrowserSupport.kt  HttpSourceSupport.kt  NetworkMetadataBackfill.kt  NetworkSourcesStore.kt  SmbBrowserSupport.kt  SmbClientSupport.kt  SmbSourceSupport.kt
app/src/main/java/com/flopster101/siliconplayer/playback/: AppNavigationCommonActions.kt  AppNavigationLocalSupport.kt  AppNavigationManualOpenActions.kt  AppNavigationManualOpenDelegates.kt  AppNavigationPlaybackLogic.kt  AppNavigationPlaybackOps.kt  AppNavigationPlaybackStateDelegates.kt  AppNavigationPlayerLayout.kt  AppNavigationPlayerOverlaysSection.kt  AppNavigationPlayerShellActions.kt  AppNavigationPlayerSurfaceActions.kt  AppNavigationRuntimeDelegates.kt  AppNavigationTrackActions.kt  AppNavigationTrackLoadDelegates.kt  AppNavigationTrackNavDelegates.kt  AppNavigationTrackStateActions.kt  ExpandedPlayerOverlayHost.kt  HomeRecentActions.kt  ManualInputActionLogic.kt  ManualRemoteOpenCoordinator.kt  ManualSelectionSupport.kt  ManualSmbAuthCoordinator.kt  MiniPlayerOverlayHost.kt  PlaybackDialogsHost.kt  PlaybackDialogsWiring.kt  PlaybackSessionCoordinator.kt  PlaybackUiSupport.kt  PlayerTransitionStateHolder.kt  ProgressiveRemoteWarmPrefetchSupport.kt  RemoteDownloadSupport.kt  RemoteExportSupport.kt  RemoteLoadUiStateHolder.kt  RemoteOpenLogic.kt  RemotePlayableSourceIdsHolder.kt  RemotePreloadSupport.kt  RemotePreloadUiStateHolder.kt  SmbDownloadSupport.kt
app/src/main/java/com/flopster101/siliconplayer/pluginsettings/: AdPlugSettings.kt  CrsidSettings.kt  FfmpegSettings.kt  FurnaceSettings.kt  GmeSettings.kt  HivelyTrackerSettings.kt  KlystrackSettings.kt  LazyUsf2Settings.kt  OpenMptSettings.kt  PluginSettingsApi.kt  PluginSettingsBuilderImpl.kt  Sc68Settings.kt  SidPlayFpSettings.kt  UadeSettings.kt  VgmPlaySettings.kt  Vio2sfSettings.kt
app/src/main/java/com/flopster101/siliconplayer/preferences/: AppPreferenceKeys.kt
app/src/main/java/com/flopster101/siliconplayer/session/: AppNavigationRecentsActions.kt  CacheExportSupport.kt  SessionRestoreSupport.kt  SessionSupport.kt
app/src/main/java/com/flopster101/siliconplayer/settings/: AboutCatalog.kt  AppSettingEnums.kt  SettingsActionHandlers.kt  SettingsActionWiring.kt  SettingsScaffoldChrome.kt  SettingsScreenContracts.kt  SettingsScreenMappers.kt  SettingsStateHolderWiring.kt
app/src/main/java/com/flopster101/siliconplayer/settings/components/: AboutEntityDialog.kt  CoreCapabilitiesDialog.kt  CoreSettingsCards.kt  OpenMptSettingsComponents.kt  PluginSettingsComponents.kt  SettingsBaseCards.kt  SettingsDialogComponents.kt  (+3 more)
app/src/main/res/drawable/: ic_launcher_background.xml  tv_banner.xml
app/src/main/res/drawable-v24/: ic_launcher_monochrome.xml
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: file_provider_paths.xml
app/src/test/java/com/flopster101/siliconplayer/: PlaybackUiSupportTest.kt
gradle/: libs.versions.toml
shared-core/: build.gradle.kts
shared-core/src/commonMain/kotlin/com/flopster101/siliconplayer/: FileNameHeuristics.kt  RepeatMode.kt
shared-core/src/commonTest/kotlin/com/flopster101/siliconplayer/: FileNameHeuristicsTest.kt  RepeatModeTest.kt
(+56 files in other folders)
